Fix landing page spacing issues

--- a/style/know-more.css
+++ b/style/know-more.css
@@ -122,6 +122,9 @@ a:active {
   .more {
     font-size: 18px;
   }
+  .page-2 {
+    height: 500px;
+  }
   .button {
     padding: 7px;
     border-radius: 15px;
